Create privacy policy page in index.html
Added structured HTML for the privacy policy page.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-PRIVACY POLICY
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - GDL App</title>
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; line-height: 1.6; }
+        h1 { color: #333; }
+        h2 { color: #555; margin-top: 30px; }
+        p { color: #666; }
+    </style>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
+    <p><strong>Last Updated: January 27, 2026</strong></p>
+    
+    PRIVACY POLICY
 
 Last Updated: January 27, 2026
 
@@ -80,3 +97,8 @@ Email: niksurmanidze@icloud.com
 12. CONSENT
 
 By using our App, you consent to this Privacy Policy.
+
+    
+</body>
+</html>
+
