--- a/index.html
+++ b/index.html
@@ -5,100 +5,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - GDL App</title>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; line-height: 1.6; }
-        h1 { color: #333; }
-        h2 { color: #555; margin-top: 30px; }
-        p { color: #666; }
+        * { box-sizing: border-box; }
+        body { 
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
+            max-width: 800px; 
+            margin: 0 auto; 
+            padding: 20px; 
+            line-height: 1.7; 
+            background: #f9f9f9;
+            color: #333;
+        }
+        .container {
+            background: white;
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        h1 { 
+            color: #FF9500; 
+            border-bottom: 3px solid #FF9500;
+            padding-bottom: 15px;
+        }
+        h2 { 
+            color: #333; 
+            margin-top: 35px;
+            font-size: 1.3em;
+        }
+        p, li { color: #555; }
+        ul { padding-left: 20px; }
+        li { margin: 8px 0; }
+        .updated { 
+            color: #888; 
+            font-size: 0.9em;
+            margin-bottom: 30px;
+        }
+        .app-name { 
+            background: #FF9500;
+            color: white;
+            padding: 3px 10px;
+            border-radius: 5px;
+            font-weight: 600;
+        }
+        a { color: #FF9500; }
+        .footer {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #eee;
+            text-align: center;
+            color: #888;
+            font-size: 0.9em;
+        }
+        .footer a { margin: 0 10px; }
     </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p><strong>Last Updated: January 27, 2026</strong></p>
-    
-    PRIVACY POLICY
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p class="updated"><strong>Last Updated:</strong> January 27, 2026</p>
+        <p><span class="app-name">GDL</span> (Georgian Driver's License) App</p>
 
-Last Updated: January 27, 2026
+        <h2>1. Introduction</h2>
+        <p>This Privacy Policy explains how we collect, use, and protect your information when you use the GDL mobile application ("App"). By using our App, you agree to the collection and use of information in accordance with this policy.</p>
 
-GDL (Georgian Driver's License) App
+        <h2>2. Information We Collect</h2>
+        <p><strong>2.1 Device Information</strong></p>
+        <ul>
+            <li>Device token for push notifications (required for Spot Notifications feature)</li>
+            <li>Device type and operating system version</li>
+        </ul>
+        <p><strong>2.2 User Preferences (Stored Locally)</strong></p>
+        <ul>
+            <li>Selected exam city preferences</li>
+            <li>Transmission type preference (manual/automatic)</li>
+            <li>Language preference (English/Georgian)</li>
+            <li>Theory test progress and completed questions</li>
+        </ul>
+        <p><strong>2.3 Subscription Information</strong></p>
+        <ul>
+            <li>Subscription status is managed through Apple's App Store</li>
+            <li>We do not directly collect or store payment information</li>
+        </ul>
 
-1. INTRODUCTION
+        <h2>3. How We Use Your Information</h2>
+        <p>We use the collected information to:</p>
+        <ul>
+            <li>Send push notifications about available exam slots (Premium feature)</li>
+            <li>Save your preferences for a personalized experience</li>
+            <li>Track your theory test progress locally on your device</li>
+            <li>Improve app functionality and user experience</li>
+        </ul>
 
-This Privacy Policy explains how we collect, use, and protect your information when you use the GDL mobile application ("App"). By using our App, you agree to the collection and use of information in accordance with this policy.
+        <h2>4. Data Storage</h2>
+        <ul>
+            <li>User preferences and progress are stored locally on your device</li>
+            <li>Device tokens for push notifications are stored securely on our servers</li>
+            <li>We do not sell, trade, or transfer your personal information to third parties</li>
+        </ul>
 
-2. INFORMATION WE COLLECT
+        <h2>5. Push Notifications</h2>
+        <p>If you subscribe to Spot Notifications:</p>
+        <ul>
+            <li>Your device token and city/transmission preferences are sent to our server</li>
+            <li>We use this information solely to send relevant exam slot notifications</li>
+            <li>You can unsubscribe at any time through the App</li>
+        </ul>
 
-2.1 Device Information
-- Device token for push notifications (required for Spot Notifications feature)
-- Device type and operating system version
+        <h2>6. Third-Party Services</h2>
+        <p>Our App uses:</p>
+        <ul>
+            <li>Apple Push Notification Service (APNs) for notifications</li>
+            <li>Apple StoreKit for subscription management</li>
+        </ul>
+        <p>These services have their own privacy policies.</p>
 
-2.2 User Preferences (Stored Locally)
-- Selected exam city preferences
-- Transmission type preference (manual/automatic)
-- Language preference (English/Georgian)
-- Theory test progress and completed questions
+        <h2>7. Data Security</h2>
+        <p>We implement appropriate security measures to protect your information. However, no method of electronic transmission or storage is 100% secure.</p>
 
-2.3 Subscription Information
-- Subscription status is managed through Apple's App Store
-- We do not directly collect or store payment information
+        <h2>8. Children's Privacy</h2>
+        <p>Our App is not intended for children under 16. We do not knowingly collect personal information from children under 16.</p>
 
-3. HOW WE USE YOUR INFORMATION
+        <h2>9. Your Rights</h2>
+        <p>You can:</p>
+        <ul>
+            <li>Delete your local data by uninstalling the App</li>
+            <li>Unsubscribe from notifications at any time</li>
+            <li>Contact us to request deletion of your device token from our servers</li>
+        </ul>
 
-We use the collected information to:
-- Send push notifications about available exam slots (Premium feature)
-- Save your preferences for a personalized experience
-- Track your theory test progress locally on your device
-- Improve app functionality and user experience
+        <h2>10. Changes to This Policy</h2>
+        <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new policy in the App.</p>
 
-4. DATA STORAGE
+        <h2>11. Contact Us</h2>
+        <p>If you have questions about this Privacy Policy, please contact us at:<br>
+        <strong>Email:</strong> <a href="mailto:niksurmanidze@icloud.com">niksurmanidze@icloud.com</a></p>
 
-- User preferences and progress are stored locally on your device
-- Device tokens for push notifications are stored securely on our servers
-- We do not sell, trade, or transfer your personal information to third parties
+        <h2>12. Consent</h2>
+        <p>By using our App, you consent to this Privacy Policy.</p>
 
-5. PUSH NOTIFICATIONS
-
-If you subscribe to Spot Notifications:
-- Your device token and city/transmission preferences are sent to our server
-- We use this information solely to send relevant exam slot notifications
-- You can unsubscribe at any time through the App
-
-6. THIRD-PARTY SERVICES
-
-Our App uses:
-- Apple Push Notification Service (APNs) for notifications
-- Apple StoreKit for subscription management
-
-These services have their own privacy policies.
-
-7. DATA SECURITY
-
-We implement appropriate security measures to protect your information. However, no method of electronic transmission or storage is 100% secure.
-
-8. CHILDREN'S PRIVACY
-
-Our App is not intended for children under 16. We do not knowingly collect personal information from children under 16.
-
-9. YOUR RIGHTS
-
-You can:
-- Delete your local data by uninstalling the App
-- Unsubscribe from notifications at any time
-- Contact us to request deletion of your device token from our servers
-
-10. CHANGES TO THIS POLICY
-
-We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new policy in the App.
-
-11. CONTACT US
-
-If you have questions about this Privacy Policy, please contact us at:
-Email: niksurmanidze@icloud.com
-
-12. CONSENT
-
-By using our App, you consent to this Privacy Policy.
-
-    
+        <div class="footer">
+            <a href="https://serialpsycho.github.io/gdl-privacy/">Privacy Policy</a> | 
+            <a href="https://serialpsycho.github.io/gdl-privacy/terms.html">Terms of Use</a>
+        </div>
+    </div>
 </body>
 </html>
-
